<resources>
    <string name="app_name">PrescribeMe</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Appleseed</string>
    <string name="nav_header_subtitle">John@appleseed.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_med_history">Medical History</string>
    <string name="menu_my_doctors">My Doctors</string>
    <string name="menu_stores_nearby">Stores Nearby</string>
    <string name="menu_contact_us">Contact Us</string>
    <string name="menu_logout">Log Out</string>
</resources>
